--- a/modules/ROOT/partials/configuration/forced_root_block_attrs.adoc
+++ b/modules/ROOT/partials/configuration/forced_root_block_attrs.adoc
@@ -1,7 +1,7 @@
 [[forced_root_block_attrs]]
 == `forced_root_block_attrs`
 
-This option enables you specify attributes for the <<forced_root_block,forced_root_block>>.
+This option enables you specify attributes for the xref:forced_root_block[forced_root_block].
 
 *Type:* `Object`
 
