--- a/modules/ROOT/partials/configuration/init_instance_callback.adoc
+++ b/modules/ROOT/partials/configuration/init_instance_callback.adoc
@@ -16,4 +16,4 @@ tinymce.init({
 });
 ----
 
-You may also want to take a look at the <<setup,setup callback option>> as it can be used to bind events before the editor instance is initialized.
+You may also want to take a look at the xref:setup[setup callback option] as it can be used to bind events before the editor instance is initialized.
