--- a/modules/ROOT/partials/configuration/invalid_elements.adoc
+++ b/modules/ROOT/partials/configuration/invalid_elements.adoc
@@ -16,4 +16,4 @@ tinymce.init({
 
 CAUTION: This option doesn't accept attributes in the list, only elements.
 
-Also see <<valid_elements,valid_elements>> and <<extended_valid_elements,extended_valid_elements>> for more configuration options.
+Also see xref:valid_elements[valid_elements] and xref:extended_valid_elements[extended_valid_elements] for more configuration options.
