--- a/modules/ROOT/partials/configuration/language_url.adoc
+++ b/modules/ROOT/partials/configuration/language_url.adoc
@@ -1,7 +1,7 @@
 [[language_url]]
 == `language_url`
 
-When using the <<language,`language`>> option to set the user interface language you may choose to place any language pack(s) in a directory other than the default. If you do this you need to provide a simple URL to where the language file is located. We recommend using a site absolute URL.
+When using the xref:language[`language`] option to set the user interface language you may choose to place any language pack(s) in a directory other than the default. If you do this you need to provide a simple URL to where the language file is located. We recommend using a site absolute URL.
 
 *Type:* `String`
 
