--- a/modules/ROOT/partials/configuration/menu.adoc
+++ b/modules/ROOT/partials/configuration/menu.adoc
@@ -18,4 +18,4 @@ include::partial$configuration/defaultmenuitems.adoc[]
 
 include::partial$misc/differs_for_mobile.adoc[]
 
-If all you need is to control which menus are available and/or in what order, see the <<menubar,menubar parameter>>.
+If all you need is to control which menus are available and/or in what order, see the xref:menubar[menubar parameter].
