--- a/modules/ROOT/partials/configuration/menubar.adoc
+++ b/modules/ROOT/partials/configuration/menubar.adoc
@@ -35,4 +35,4 @@ tinymce.init({
 });
 ----
 
-If you need more control over the contents of the menus, see the <<menu,menu parameter>>.
+If you need more control over the contents of the menus, see the xref:menu[menu parameter].
