--- a/modules/ROOT/partials/configuration/min_width.adoc
+++ b/modules/ROOT/partials/configuration/min_width.adoc
@@ -17,4 +17,4 @@ tinymce.init({
 });
 ----
 
-NOTE: By default the <<resize,`resize`>> handle does not allow horizontal dragging and giving this key a value will not result in an observable behavior.
+NOTE: By default the xref:resize[`resize`] handle does not allow horizontal dragging and giving this key a value will not result in an observable behavior.
