--- a/modules/ROOT/partials/configuration/removed_menuitems.adoc
+++ b/modules/ROOT/partials/configuration/removed_menuitems.adoc
@@ -1,6 +1,6 @@
 == `removed_menuitems`
 
-This option allows you to remove items from {productname}'s drop down menus. This is useful if you are using the <<menubar,menubar>> option to set your menus rather than the more specific <<menu,menu>> option.
+This option allows you to remove items from {productname}'s drop down menus. This is useful if you are using the xref:menubar[menubar] option to set your menus rather than the more specific xref:menu[menu] option.
 
 *Type:* `String`
 
