--- a/modules/ROOT/partials/configuration/rtc_client_connected.adoc
+++ b/modules/ROOT/partials/configuration/rtc_client_connected.adoc
@@ -1,11 +1,11 @@
 [[rtc_client_connected]]
 === `rtc_client_connected`
 
-This option allows applications to show when a user enters the RTC session. When used in combination with <<rtc_client_disconnected,`rtc_client_disconnected`>>, a user interface of connected users can be kept up to date.
+This option allows applications to show when a user enters the RTC session. When used in combination with xref:rtc_client_disconnected[`rtc_client_disconnected`], a user interface of connected users can be kept up to date.
 
 Only one `rtc_client_connected` event will be fired per client connection. Connecting to a session with multiple existing clients will fire separate `rtc_client_connected` events for each existing client. If a user connects using two or more editors (such as on desktop and on mobile), a separate `rtc_client_connected` event will be fired.
 
-To help with generating a user interface for connected users, an object for user details is provided by the <<rtc_user_details_provider,`rtc_user_details_provider`>> option.
+To help with generating a user interface for connected users, an object for user details is provided by the xref:rtc_user_details_provider[`rtc_user_details_provider`] option.
 
 ifeval::[{plugincode} != "rtc"]
 
@@ -18,6 +18,6 @@ Type:: Function
 Input parameters::
 include::partial$rtc/rtc-client-connect-inputs.adoc[]
 
-CAUTION: {productname} cannot guarantee the accuracy of data which comes from a remote object. {companyname} recommends only using the client information data for status flags. To obtain authentic client information, use the <<rtc_user_details_provider,`rtc_user_details_provider`>> data returned through the `userDetails` field.
+CAUTION: {productname} cannot guarantee the accuracy of data which comes from a remote object. {companyname} recommends only using the client information data for status flags. To obtain authentic client information, use the xref:rtc_user_details_provider[`rtc_user_details_provider`] data returned through the `userDetails` field.
 
 include::partial$rtc/rtc-client-connect-disconnect-example.adoc[]
