--- a/modules/ROOT/partials/configuration/rtc_client_disconnected.adoc
+++ b/modules/ROOT/partials/configuration/rtc_client_disconnected.adoc
@@ -1,7 +1,7 @@
 [[rtc_client_disconnected]]
 === `rtc_client_disconnected`
 
-The `rtc_client_disconnected` option can be used with the <<rtc_client_connected,`rtc_client_connected`>> option to maintain a list of connected users.
+The `rtc_client_disconnected` option can be used with the xref:rtc_client_connected[`rtc_client_connected`] option to maintain a list of connected users.
 
 ifeval::[{plugincode} != "rtc"]
 
