--- a/modules/ROOT/partials/configuration/rtc_client_info.adoc
+++ b/modules/ROOT/partials/configuration/rtc_client_info.adoc
@@ -3,7 +3,7 @@
 
 The `rtc_client_info` option allows status flags from the local editor environment to be provided to other connecting clients. For example: "This user is on a mobile device". This option should not be used to communicate sensitive information; the authenticity of the data cannot be guaranteed.
 
-This option accepts an object that must be serializable (`JSON.stringify` will be used to transmit it between clients). Other clients receive a copy of this object in their <<rtc_client_connected,`rtc_client_connected`>> events.
+This option accepts an object that must be serializable (`JSON.stringify` will be used to transmit it between clients). Other clients receive a copy of this object in their xref:rtc_client_connected[`rtc_client_connected`] events.
 
 ifeval::[{plugincode} != "rtc"]
 
