--- a/modules/ROOT/partials/configuration/rtc_token_provider.adoc
+++ b/modules/ROOT/partials/configuration/rtc_token_provider.adoc
@@ -26,7 +26,7 @@ Input parameters::
 
 | `documentId`
 | `string`
-| The document ID from the <<rtc_document_id,`rtc_document_id`>> option.
+| The document ID from the xref:rtc_document_id[`rtc_document_id`] option.
 |===
 
 Return data::
