--- a/modules/ROOT/partials/configuration/toolbar.adoc
+++ b/modules/ROOT/partials/configuration/toolbar.adoc
@@ -94,4 +94,4 @@ tinymce.init({
 });
 ----
 
-Alternatively, you may specify multiple toolbars through the use of the <<toolbarn,toolbar(n)>> option.
+Alternatively, you may specify multiple toolbars through the use of the xref:toolbarn[toolbar(n)] option.
