--- a/modules/ROOT/partials/configuration/toolbar_n.adoc
+++ b/modules/ROOT/partials/configuration/toolbar_n.adoc
@@ -15,4 +15,4 @@ tinymce.init({
 });
 ----
 
-Please see the <<toolbar,toolbar>> configuration option for details.
+Please see the xref:toolbar[toolbar] configuration option for details.
