--- a/modules/ROOT/partials/configuration/valid_children.adoc
+++ b/modules/ROOT/partials/configuration/valid_children.adoc
@@ -33,4 +33,4 @@ tinymce.init({
 });
 ----
 
-This is an option you shouldn't have to fiddle with. The default rule set for this follows the HTML5 specification and some legacy elements from HTML4. You can switch between these defaults by configuring the <<scheme,`schema`>> option.
+This is an option you shouldn't have to fiddle with. The default rule set for this follows the HTML5 specification and some legacy elements from HTML4. You can switch between these defaults by configuring the xref:scheme[`schema`] option.
