--- a/modules/ROOT/pages/ui-components/dialogcomponents.adoc
+++ b/modules/ROOT/pages/ui-components/dialogcomponents.adoc
@@ -25,7 +25,7 @@ The basic dialog type is a *panel* dialog. A panel is a container for xref:panel
 [[tabpanel]]
 === `tabpanel`
 
-A *tabpanel* dialog contains multiple panels, and a tab navigation menu on the left-hand side of the dialog to allow for switching between panels. Each panel can contain different <<panelcomponents,panel components>>, allowing for complex dialogs.
+A *tabpanel* dialog contains multiple panels, and a tab navigation menu on the left-hand side of the dialog to allow for switching between panels. Each panel can contain different xref:panelcomponents[panel components], allowing for complex dialogs.
 
 Each tab panel is defined using the following configuration options:
 
