--- a/modules/ROOT/partials/configuration/rtc_encryption_provider.adoc
+++ b/modules/ROOT/partials/configuration/rtc_encryption_provider.adoc
@@ -25,7 +25,7 @@ Input data::
 
 | `documentId`
 | `string`
-| The document ID from the <<rtc_document_id,`rtc_document_id`>> option.
+| The document ID from the xref:rtc_document_id[`rtc_document_id`] option.
 
 | `keyHint`
 | `string` or `null`
