--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -407,8 +407,10 @@
 ** xref:release-notes.adoc[Release notes for TinyMCE 6]
 *** TinyMCE 6.8.3
 **** xref:6.8.3-release-notes.adoc#overview[Overview]
+**** xref:6.8.3-release-notes.adoc#accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
 **** xref:6.8.3-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
 **** xref:6.8.3-release-notes.adoc#bug-fixes[Bug fixes]
+**** xref:6.8.3-release-notes.adoc#security-fix[Security fix]
 *** TinyMCE 6.8.2
 **** xref:6.8.2-release-notes.adoc#overview[Overview]
 **** xref:6.8.2-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
