DOC-2162: initial outline with non-editable related options extracted to non-editable-content-options.adoc

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -270,6 +270,7 @@
 * Content
 ** xref:add-css-options.adoc[Add CSS]
 ** xref:content-behavior-options.adoc[Behaviors]
+** xref:non-editable-content-options.adoc[Non-editable content]
 ** xref:user-formatting-options.adoc[User formatting]
 ** xref:content-filtering.adoc[Content filtering]
 ** xref:content-localization.adoc[Localization]
