Add admonition from non-editable-content-options.adoc to the ie-template-creation.adoc

--- a/modules/ROOT/pages/ie-template-creation.adoc
+++ b/modules/ROOT/pages/ie-template-creation.adoc
@@ -58,6 +58,6 @@ Used here to setup the portions of an almost-ready-to-send-out standard document
 |===
 
 [NOTE]
-Refer to xref:non-editable-content-options.adoc[Non-editable content options] for more detailed multi-root configuration information.
+Refer to xref:non-editable-content-options.adoc[Non-editable content options] for more detailed `noneditable` configuration information.
 
 liveDemo::ie-template-creation[]
