--- a/modules/ROOT/pages/non-editable-content-options.adoc
+++ b/modules/ROOT/pages/non-editable-content-options.adoc
@@ -9,7 +9,8 @@ include::partial$configuration/editable_root.adoc[]
 
 // TODO: Add demo for editable_class and editable_root
 
-// TODO: Add admonition back to ie-template-creation.adoc for a practical example of multi-root editing
+[NOTE]
+Visit xref:ie-template-creation.adoc[Template creation example] for a practical example of multi-root editing.
 
 include::partial$configuration/noneditable_class.adoc[]
 
