add demo outline for noneditable-regexp option

--- a/modules/ROOT/pages/non-editable-content-options.adoc
+++ b/modules/ROOT/pages/non-editable-content-options.adoc
@@ -18,4 +18,5 @@ include::partial$configuration/noneditable_class.adoc[]
 
 include::partial$configuration/noneditable_regexp.adoc[]
 
-// TODO: Add demo for noneditable_regexp
+// TODO: improve example to show more practical use case
+liveDemo::noneditable-regexp[]
