added demo for editable-class and editable-root options

--- a/modules/ROOT/pages/non-editable-content-options.adoc
+++ b/modules/ROOT/pages/non-editable-content-options.adoc
@@ -8,7 +8,7 @@ include::partial$configuration/editable_class.adoc[]
 
 include::partial$configuration/editable_root.adoc[]
 
-// TODO: Add demo for editable_class and editable_root
+liveDemo::editable-class-and-editable-root[]
 
 [NOTE]
 Visit xref:ie-template-creation.adoc[Template creation example] for a practical example of multi-root editing.
