DOC-2236: Fix review suggestions

--- a/modules/ROOT/partials/configuration/statusbar.adoc
+++ b/modules/ROOT/partials/configuration/statusbar.adoc
@@ -2,7 +2,7 @@
 
 This option allows you to specify whether {productname} should display the status bar at the bottom of the editor.
 
-The statusbar includes the xref:elementpath[`elementpath`], xref:plugins/opensource/wordcount/[`wordcount`] and editor xref:resize[]`resize`].
+The statusbar includes the xref:elementpath[`elementpath`], xref:plugins/opensource/wordcount[`wordcount`] and editor xref:resize[`resize`].
 
 To disable the status bar, the `statusbar` option should be provided with a boolean `false` value.
 
