--- a/modules/ROOT/pages/6.8.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.8.3-release-notes.adoc
@@ -9,7 +9,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 [[overview]]
 == Overview
 
-{productname} 6.8.3 was released for {enterpriseversion} and {cloudname} on <weekday>, <month> <DD>^<st|nd|rd|th>^, <YYYY>. These release notes provide an overview of the changes for {productname} 6.8.3, including:
+{productname} 6.8.3 was released for {enterpriseversion} and {cloudname} on Wednesday, February 08^th^, 2024. These release notes provide an overview of the changes for {productname} 6.8.3, including:
 
 * xref:accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
 * xref:accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
