--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -7,7 +7,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 == 6.8.3 - 2024-02-08
 
 === Fixed
-* `ShadowDOM` skin was not loaded properly when used with js bundling feature.
+* `ShadowDOM` skin was not loaded properly when used with JS bundling feature.
 * The floating toolbar would not be fully visible when the editor was placed inside a scrollable container.
 
 == 6.8.2 - 2023-12-11
