added getusers-api-alternative demo to 6.0 release notes and the 5 to 6 migration guide

--- a/modules/ROOT/pages/6.0-release-notes-premium-changes.adoc
+++ b/modules/ROOT/pages/6.0-release-notes-premium-changes.adoc
@@ -172,6 +172,9 @@ The following change was made to the xref:mentions.adoc[Mentions] plugin:
 
 The `getUsers` API was removed.
 
+View the following demo for an alternative to the `getUsers` API:
+
+liveDemo::getusers-api-alternative[height="400"]
         
 === PowerPaste
 
