DOC-2283: Bring live 6 changes into staging 7 (#3064)
* DOC-1020: add `language_load` option to `ui-localization.adoc` page. (#3027)

* DOC-1020: add  option to  page that configures whether additional plugin/theme languages are loaded when bundling.

* DOC-1020: updates to language_load options and admons.

* DOC-1020: copy edits and improvements.

* Update modules/ROOT/partials/configuration/language_load.adoc

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

* Update changelog.md

* Update modules/ROOT/partials/configuration/language_load.adoc

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

* Update modules/ROOT/partials/configuration/language_load.adoc

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

---------

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

* DOC-2178: add fix to  for  when inserting template. (#3043)

* DOC-2201: Added link to `ai.adoc` to direct users to the AI Assistant demo. (#3044)

* DOC-2178: add fix to  for  when inserting template.

* DOC-2201: Added link to  to direct users to the AI Assistant demo.

* Update modules/ROOT/pages/ai.adoc

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

---------

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

* DOC-2235: changes and updates to  page. (#3039)

* DOC-2240: add new `understanding-editor-loads.adoc` to `how-to-guide` section (#3047)

* DOC-2240: add new understanding-editor-loads.adoc to how-to-guide section.

* Update modules/ROOT/pages/understanding-editor-loads.adoc

* Update modules/ROOT/pages/understanding-editor-loads.adoc

Co-authored-by: Andrew Herron <andrew.herron@tiny.cloud>

* Update modules/ROOT/pages/understanding-editor-loads.adoc

Co-authored-by: Andrew Herron <andrew.herron@tiny.cloud>

* Update modules/ROOT/pages/understanding-editor-loads.adoc

* Update modules/ROOT/pages/understanding-editor-loads.adoc


--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -215,6 +215,7 @@
 ** xref:migration-from-6x.adoc[Migrating from TinyMCE 6]
 ** xref:migration-from-froala.adoc[Migrating from Froala]
 ** xref:generate-rsa-key-pairs.adoc[Generate public key pairs]
+** xref:understanding-editor-loads.adoc[Understanding editor loads]
 * xref:examples.adoc[Examples]
 ** xref:examples.adoc#general-examples[General examples]
 *** xref:basic-example.adoc[Basic example]
