--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -406,6 +406,21 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for TinyMCE 7]
+*** TinyMCE 7.0
+**** xref:7.0-release-notes.adoc#overview[Overview]
+**** xref:7.0-release-notes.adoc#new-premium-plugin<s>[New Premium plugin<s>]
+**** xref:7.0-release-notes.adoc#new-open-source-plugin<s>[New Open Source plugin<s>]
+**** xref:7.0-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
+**** xref:7.0-release-notes.adoc#accompanying-premium-plugin-end-of-life-announcement[Accompanying Premium plugin end-of-life announcement]
+**** xref:7.0-release-notes.adoc#accompanying-open-source-plugin-end-of-life-announcement[Accompanying open source plugin end-of-life-announcement]
+**** xref:7.0-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
+**** xref:7.0-release-notes.adoc#improvements[Improvements]
+**** xref:7.0-release-notes.adoc#additions[Additions]
+**** xref:7.0-release-notes.adoc#changes[Changes]
+**** xref:7.0-release-notes.adoc#bug-fixes[Bug fixes]
+**** xref:7.0-release-notes.adoc#security-fixes[Security fixes]
+**** xref:7.0-release-notes.adoc#deprecated[Deprecated]
+**** xref:7.0-release-notes.adoc#known-issues[Known issues]
 ** xref:changelog.adoc[Changelog]
 * xref:invalid-api-key.adoc[Invalid API key]
 * xref:support.adoc[Support]
